--- a/introduccion.html
+++ b/introduccion.html
@@ -24,7 +24,7 @@
   	</div>
 	<div class="content">
 	<ul>
-	  <img src="img/pdf_icon.png" width="25" height="25" alt=""/><a href="D:\Documentos\DreamWeaver\Proyecto Prueba\doc\Syllabus.pdf" download="Syllabus de prueba"> Descarga el Syllabus </a></ul>
+	  <img src="img/pdf_icon.png" width="25" height="25" alt=""/><a href="Syllabus.pdf" download="Syllabus de prueba"> Descarga el Syllabus </a></ul>
 	<ul>Semana 1</ul>
 		<table class="table" width="200" border="2">
 		  <tbody>
@@ -36,7 +36,7 @@
 			<tr>
 			  <td>Sesión introductoria</td>
 			  <td>Profesor Juan Perez</td>
-			  <td>	<a href="D:\Documentos\DreamWeaver\Proyecto Prueba\doc\MaterialClase1.pdf" download="Material clase 1"> <img src="img/pdf_icon.png" width="25" height="25" alt=""/>  </a></td>
+			  <td>	<a href="MaterialClase1.pdf" download="Material clase 1"> <img src="img/pdf_icon.png" width="25" height="25" alt=""/>  </a></td>
 			</tr>
 		  </tbody>
 		</table>
